kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: daedalus-backend
  name: daedalus-backend-ingress
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: daedalus-backend-ingress-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/target-type: instance
    # ALB controller would otherwise auto pull the cert based on host
    alb.ingress.kubernetes.io/certificate-arn: >
      arn:aws:acm:ap-northeast-1:869229378759:certificate/2ff3dc1b-e3f0-4f19-917b-591651c85e83
    # Conditions will be matched to service so conditions.<servicename> must match
    alb.ingress.kubernetes.io/conditions.daedalus-auth-service: >
      [{"field":"host-header","hostHeaderConfig":{"values":["auth.daedalus.foo"]}}]
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: daedalus-auth-service
                port:
                  number: 80
